[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Grid/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/MapMaker/map_maker.gd" type="Script" id=2]

[node name="MapMaker" type="Node2D"]
script = ExtResource( 2 )
origin = Vector2( 50, -50 )

[node name="Grid" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ScrollContainer"]

[node name="Save" type="Button" parent="CanvasLayer/Control"]
margin_left = 899.18
margin_top = 510.776
margin_right = 911.18
margin_bottom = 530.776
text = "Save"

[node name="Load" type="Button" parent="CanvasLayer/Control"]
margin_left = 835.2
margin_top = 508.531
margin_right = 876.2
margin_bottom = 528.531
text = "Load"

[connection signal="pressed" from="CanvasLayer/Control/Save" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Load" to="." method="_on_Save2_pressed"]
